@startuml
title Block User Use Case

allow_mixing
left to right direction
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho

class OtherAccountView

class OtherAccountController

interface BlockUserInputBoundary {
    + execute(BlockUserInputData)
}

class BlockUserInputData

class BlockUserInteractor {
    + execute(BlockUserInputData)
}

interface BlockUserDataAccessInterface {
    + alreadyBlocked(String): boolean
    + addToBlockList(String)
    + removeFromBlockList(String)
}

interface BlockUserOutputBoundary {
    + prepareBlockSuccessView(BlockUserOutputData)
}

class BlockUserOutputData

class OtherAccountPresenter
class OtherAccountViewModel
class OtherAccountState

class MongoUserDataAccessObject

database MongoDB

OtherAccountView --> OtherAccountController
OtherAccountView --> OtherAccountState
OtherAccountView --> OtherAccountViewModel
OtherAccountController --> BlockUserInputBoundary
OtherAccountController --> BlockUserInputData
BlockUserInteractor ..|> BlockUserInputBoundary
BlockUserInteractor --> BlockUserInputData
BlockUserInteractor --> BlockUserDataAccessInterface
BlockUserInteractor --> BlockUserOutputBoundary
BlockUserInteractor --> BlockUserOutputData
MongoUserDataAccessObject ..|> BlockUserDataAccessInterface
MongoUserDataAccessObject --> MongoDB
OtherAccountPresenter ..|> BlockUserOutputBoundary
OtherAccountPresenter --> BlockUserOutputData
OtherAccountPresenter --> OtherAccountState
OtherAccountPresenter --> OtherAccountViewModel
@enduml
